--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:4306/commerce?characterEncoding=UTF-8
-    username: commerce
-    password: 1234
+    username:
+    password:
 
   jpa:
     generate-ddl: true
